tests/ui/traits/similarly_named_trait.stderr
error[E0277]: the trait bound `St: Trait` is not satisfied
  --> $DIR/similarly_named_trait.rs:20:10
   |
LL |     func(m::St);
   |     ---- ^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `Trait` is not implemented for `St`
  --> $DIR/similarly_named_trait.rs:7:5
   |
LL |     pub struct St;
   |     ^^^^^^^^^^^^^
   = note: `St` implements similarly named trait `m::Trait`, but not `Trait`
help: this trait has no implementations, consider adding one
  --> $DIR/similarly_named_trait.rs:1:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `func`
  --> $DIR/similarly_named_trait.rs:13:12
   |
LL | fn func<T: Trait>(_: T) {}
   |            ^^^^^ required by this bound in `func`

error[E0277]: the trait bound `St: TraitWithParam<St>` is not satisfied
  --> $DIR/similarly_named_trait.rs:24:11
   |
LL |     func2(m::St);
   |     ----- ^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `TraitWithParam<St>` is not implemented for `St`
  --> $DIR/similarly_named_trait.rs:7:5
   |
LL |     pub struct St;
   |     ^^^^^^^^^^^^^
   = note: `St` implements similarly named trait `m::TraitWithParam`, but not `TraitWithParam<St>`
help: this trait has no implementations, consider adding one
  --> $DIR/similarly_named_trait.rs:2:1
   |
LL | trait TraitWithParam<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `func2`
  --> $DIR/similarly_named_trait.rs:16:13
   |
LL | fn func2<T: TraitWithParam<T>> (_: T) {}
   |             ^^^^^^^^^^^^^^^^^ required by this bound in `func2`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
